--- a/statement_to_blob.ipynb
+++ b/statement_to_blob.ipynb
@@ -2,23 +2,72 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# imports\n",
+    "from azure.storage.blob import BlobServiceClient, BlobClient, ContainerClient\n",
+    "import os"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "blob_service_client = BlobServiceClient.from_connection_string(connection_string)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Azure Blob connection settings\n",
+    "connection_string = \"DefaultEndpointsProtocol=https;AccountName=musicanalyzerdl;AccountKey=0V7UY9Q0BAdcpuHKloXc7hfyGxLh5YUrpRX5Y24ALxp8XSaLqXkmyGzY58crZ3ZH02oFgUgrsYrb+AStRin0CQ==;EndpointSuffix=core.windows.net\"\n",
+    "container_name = \"statements/UMG\"\n",
+    "blob_name = \"UMG_test\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'azure'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[1;32mUntitled-1.ipynb Cell 1\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> <a href='vscode-notebook-cell:Untitled-1.ipynb?jupyter-notebook#W0sdW50aXRsZWQ%3D?line=0'>1</a>\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mazure\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mstorage\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mblob\u001b[39;00m \u001b[39mimport\u001b[39;00m BlobServiceClient, BlobClient, ContainerClient\n",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'azure'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Uploading to Azure Storage as blob:\n",
+      "\t201906_UMG_Buju_Reggae_USD_6_Detailed Royalty Statement2019H1.csv\n"
      ]
     }
    ],
    "source": [
-    "from azure.storage.blob import BlobServiceClient, BlobClient, ContainerClient"
+    "# Create a local directory to hold blob data\n",
+    "local_path = \"../../Current Deals/Buju/Data Ingestion/Root/Input CSVs/UMG\"\n",
+    "\n",
+    "# Create a file in the local data directory to upload and download\n",
+    "local_file_name = \"201906_UMG_Buju_Reggae_USD_6_Detailed Royalty Statement2019H1.csv\"\n",
+    "upload_file_path = os.path.join(local_path, local_file_name)\n",
+    "\n",
+    "# Write text to the file\n",
+    "# file = open(file=upload_file_path, mode='w')\n",
+    "# file.write(\"Hello, World!\")\n",
+    "# file.close()\n",
+    "\n",
+    "# Create a blob client using the local file name as the name for the blob\n",
+    "blob_client = blob_service_client.get_blob_client(container=container_name, blob=local_file_name)\n",
+    "\n",
+    "print(\"\\nUploading to Azure Storage as blob:\\n\\t\" + local_file_name)\n",
+    "\n",
+    "# Upload the created file\n",
+    "with open(file=upload_file_path, mode=\"rb\") as data:\n",
+    "    blob_client.upload_blob(data,overwrite = True) # write to blob and overwrite if true"
    ]
   }
  ],
