--- a/statement_to_blob.ipynb
+++ b/statement_to_blob.ipynb
@@ -27,7 +27,7 @@
    "outputs": [],
    "source": [
     "# Azure Blob connection settings\n",
-    "connection_string = \"DefaultEndpointsProtocol=https;AccountName=musicanalyzerdl;AccountKey=0V7UY9Q0BAdcpuHKloXc7hfyGxLh5YUrpRX5Y24ALxp8XSaLqXkmyGzY58crZ3ZH02oFgUgrsYrb+AStRin0CQ==;EndpointSuffix=core.windows.net\"\n",
+    "connection_string = \"\"\n",
     "container_name = \"statements/UMG\"\n",
     "blob_name = \"UMG_test\""
    ]
